[project]
name = "standalone-instrument-controls"
version = "2.0.0"
description = "Laboratory instrument automation suite with GUIs for Keysight and Keithley"
readme = "README.md"
authors = [{ name = "Anirudh Iyengar" }]
requires-python = ">=3.10"
dependencies = []

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.isort]
profile = "black"

[tool.pyright]
reportMissingImports = true
pythonVersion = "3.10"
